docs/api/qiskit/0.43/qiskit.pulse.transforms.AlignLeft.mdx
---
title: AlignLeft
description: API reference for qiskit.pulse.transforms.AlignLeft
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.transforms.AlignLeft
---

# AlignLeft

<Class id="qiskit.pulse.transforms.AlignLeft" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/pulse/transforms/alignments.py" signature="AlignLeft">
  Bases: [`AlignmentKind`](pulse#qiskit.pulse.transforms.AlignmentKind "qiskit.pulse.transforms.alignments.AlignmentKind")

  Align instructions in as-soon-as-possible manner.

  Instructions are placed at earliest available timeslots.

  Create new left-justified context.

  ## Methods

  <span id="qiskit-pulse-transforms-alignleft-align" />

  ### align

  <Function id="qiskit.pulse.transforms.AlignLeft.align" name="align" signature="AlignLeft.align(schedule)">
    Reallocate instructions according to the policy.

    Only top-level sub-schedules are aligned. If sub-schedules are nested, nested schedules are not recursively aligned.

    **Parameters**

    **schedule** ([*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")) – Schedule to align.

    **Returns**

    Schedule with reallocated instructions.

    **Return type**

    [*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="qiskit-pulse-transforms-alignleft-to-dict" />

  ### to\_dict

  <Function id="qiskit.pulse.transforms.AlignLeft.to_dict" name="to_dict" signature="AlignLeft.to_dict()">
    Returns dictionary to represent this alignment.

    <Admonition title="Deprecated since version 0.21" type="danger">
      The method `qiskit.pulse.transforms.alignments.AlignmentKind.to_dict()` is deprecated as of qiskit-terra 0.21. It will be removed no earlier than 3 months after the release date.
    </Admonition>

    **Return type**

    *Dict*\[str, *Any*]
  </Function>

  ## Attributes

  ### is\_sequential

  <Attribute id="qiskit.pulse.transforms.AlignLeft.is_sequential" name="is_sequential" />
</Class>

